k8s/client.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip
spec:
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        component: web

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: invicit/multi-client
                  ports:
                    - containerPort: 3000
