k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-cluster-ip
spec:
    type: ClusterIP
    ports:
        - port: 5432
          targetPort: 5432
    selector:
        component: postgres
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: postgres
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim: 
                    claimName: database-persisten-volume-claim
            containers:
                - name: postgres
                  image: postgres
                  ports:
                    - containerPort: 5432
                  volumeMounts:
                    - name: postgres-storage
                      mountPath: /var/lib/postgresql/data
                      subPath: postgres
