k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip
spec:
    type: ClusterIP
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        component: redis
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: redis
    template:
        metadata:
            labels:
                component: redis
        spec:
            containers:
                - name: redis
                  image: redis
                  ports:
                    - containerPort: 6379
