k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip
spec:
    type: ClusterIP
    ports:
        - port: 5000
          targetPort: 5000
    selector:
        component: server

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: server
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: invicit/multi-server
                  ports:
                    - containerPort: 5000
